--- a/version 2/index.html
+++ b/version 2/index.html
@@ -25,7 +25,7 @@
 
 			<div class="form-group">
 				<label for="">Email</label>
-				<input  type="email" id="email" placeholder="Enter your email" >
+				<input type="email" id="email" placeholder="Enter your email">
 				<i class="fas fa-check-circle"></i>
 				<i class="fas fa-exclamation-circle"></i>
 				<small>Error Msg</small>
@@ -48,8 +48,8 @@
 			</div>
 
 			<div class="form-group">
-				<label for="">Confirm Password</label>
-				<input type="password" id="cpassword" placeholder="Enter password again">
+				<label for="">Retype Password</label>
+				<input type="password" id="retypepass" placeholder="Enter password again">
 				<i class="fas fa-check-circle"></i>
 				<i class="fas fa-exclamation-circle"></i>
 				<small>Error Msg</small>
